[package]
name = "sokoban-wasm"
version = "0.1.0"
authors = ["mike@hillbornfitness.com"]
description = "A simple Sokoban state engine."
license = "MIT/Apache-2.0"
repository = ""
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
csv = "1"
serde = "1"
serde_derive = "1"